# RP2040_pedal

./: README.md
fabrication/: BOM_PCB_Amit_Pedal_2023-05-31.csv  BOM_PCB_pedal_india_2023-06-12.xls  BOM_PCB_pedal_india_2023-06-12.xlsx  PickAndPlace_PCB_Amit_Pedal.csv
pedal_V1.0/V1.0 final/: main.py
pedal_V1.0/reciver_test_code/: main.py  nrf24l01.py
pedal_V1.0/test codes/: aswitch_example.py  final.py  imu.py  kalman_test.py  lowpower_test.py  main.py  motion_detection (1).py  mpu6050.py  neo_pixel_example.py  test.py
pedal_V1.1/V1.0 final/: aswitch.py  main.py
pedal_V1.1/V1.1 final/: imu.py
trail codes/Arduino_MPU_test/: Arduino_MPU_test.ino
trail codes/Arduino_mpu/: Arduino_mpu.ino
trail codes/Test/: test.py
trail codes/Test/prev/: mpu6050.py  test.py
trail codes/mpu6050_i2c/: CMakeLists.txt  mpu6050_i2c.c
trail codes/mpu6050_i2c/.mpu6050_env/: pyvenv.cfg
trail codes/pedal_cpp_sdk/pedal_proj/: CMakeLists.txt  defaultPins.h  main.cpp
trail codes/pedal_cpp_sdk/pedal_proj/lib/mpu6050/: mpu6050.cpp
trail codes/pico_SDK_proj/: CMakeLists.txt  pico_SDK_proj.cpp
trail codes/prototype_code/receiver/: board.py  main.py  nrf24l01test.py  nrf_test.py  pio_dac.py
trail codes/prototype_code/receiver/gyro_acc/: mpu6050_test.py
trail codes/prototype_code/sender/: imu_test.py  main.py
trail codes/references/Meter_code/: Meter_code.ino
trail codes/saved/: gyro_calibrate.py  imu.py  imu_test.py  imu_test2.py  imu_test3.py  imu_test4.py  main.py  mpu6050.py  mpu6050_lib.py  test.py
